--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  # 1. Ejecutar Tests: Garantiza que el código sea estable
+  # 1. Ejecutar Tests
   - name: 'python:3.12-slim'
     entrypoint: /bin/sh
     args:
@@ -8,13 +8,13 @@ steps:
         pip install -r requirements.txt
         pytest
 
-  # 2. Construir la imagen de Docker
+  # 2. Construir la imagen de Docker usando la ruta de Artifact Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/user-api', '.']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/user-api', '.']
 
-  # 3. Subir la imagen a Artifact Registry
+  # 3. Subir la imagen al repositorio que creaste
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/user-api']
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/user-api']
 
   # 4. Desplegar en Google Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -23,10 +23,10 @@ steps:
       - 'run'
       - 'deploy'
       - 'user-management-api'
-      - '--image=gcr.io/$PROJECT_ID/user-api'
+      - '--image=us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/user-api'
       - '--region=us-central1'
       - '--platform=managed'
       - '--allow-unauthenticated'
 
 images:
-  - 'gcr.io/$PROJECT_ID/user-api'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/user-api'
