--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  # 1. Ejecutar Tests
+  # 1. Ejecutar Tests: Si fallan, el proceso se detiene aquí.
   - name: 'python:3.12-slim'
     entrypoint: /bin/sh
     args:
@@ -12,7 +12,7 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/user-api', '.']
 
-  # 3. Subir la imagen al repositorio que creaste
+  # 3. Subir la imagen al repositorio que creaste en GCP
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/user-api']
 
